feat(config): Introduce MessageConfig for Discord UI text and centralize permissions